button align fixed

--- a/src/components/GameBoard/Board/style.scss
+++ b/src/components/GameBoard/Board/style.scss
@@ -13,19 +13,21 @@
     padding:0;
     width:100%;
   } 
-  .cards{
-    display: flex;
-  } 
-  
-  li{
-    width:50px;
-    height:50px;
-    list-style: none;
-  }
-  ul {
-    display:flex; 
-    margin:0;
-    padding:0;
-  }
 
+  .cards{
+    margin:0;
+    .card-list{
+      display: flex;
+      padding: 0; 
+      margin:0;
+      li{
+        display: flex;
+        padding: 0; 
+        margin:0;
+        width:50px;
+        height:50px;
+        list-style: none;
+      }
+    }
+  } 
 }
